# SDLProject

./: .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
cmake/: FindSDL2_mixer.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  EntryPoint.cpp
src/app/application/: Application.cpp  Application.hpp
src/app/window/: Window.cpp  Window.hpp
src/game/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/events/: EventHandler.hpp
src/platform/logging/: Logger.cpp
src/platform/render/: Renderer.cpp  Renderer.hpp
src/platform/render/sprite/: ISprite.hpp
src/platform/render/texture/: Texture.cpp  Texture.hpp
src/platform/utils/: Paths.hpp  Types.hpp
src/platform/utils/logging/: Logger.cpp  Logger.hpp
src/platform/utils/time/: Timer.cpp  Timer.hpp
src/platform/window/: RenderWindow.cpp  RenderWindow.hpp  Window.cpp  Window.hpp
